@@ -1,3 +1,14 @@
+2015-12-29  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	Remove --insecure from gnutls-cli invocation;
+	make tls.el use trustfiles by default
+
+	* tls.el (tls-program):
+	Default to using secure TLS connections (bug#19284);
+	add a certfile by default (bug#21227).
+	(open-tls-stream):
+	Insert the trustfile by looking at `gnutls-trustfiles'.
+
 2015-12-28  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* mml-sec.el (mml-secure-bcc-is-safe):
